// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Swap/useGetSwapInfo/formatToSwap formats trade to swap correctly when direction is "exactAmountIn" 1`] = `
Object {
  "direction": "exactAmountIn",
  "exchangeRate": "1",
  "expectedToTokenAmountReceivedWei": "10000000000000000000",
  "fromToken": Object {
    "address": "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
    "asset": "https://pancakeswap.finance/images/tokens/0xe9e7CEA3DedcA5984780Bafc599bD69ADd087D56.svg",
    "decimals": 18,
    "symbol": "BUSD",
  },
  "fromTokenAmountSoldWei": "10000000000000000000",
  "minimumToTokenAmountReceivedWei": "9000000000000000000",
  "routePath": Array [
    "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
    "0xFa60D973F7642B748046464e165A65B7323b0DEE",
  ],
  "toToken": Object {
    "address": "0xFa60D973F7642B748046464e165A65B7323b0DEE",
    "asset": "https://pancakeswap.finance/images/tokens/0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82.svg",
    "decimals": 18,
    "symbol": "CAKE",
  },
}
`;

exports[`pages/Swap/useGetSwapInfo/formatToSwap formats trade to swap correctly when direction is "exactAmountOut" 1`] = `
Object {
  "direction": "exactAmountOut",
  "exchangeRate": "1",
  "expectedFromTokenAmountSoldWei": "10000000000000000000",
  "fromToken": Object {
    "address": "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
    "asset": "https://pancakeswap.finance/images/tokens/0xe9e7CEA3DedcA5984780Bafc599bD69ADd087D56.svg",
    "decimals": 18,
    "symbol": "BUSD",
  },
  "maximumFromTokenAmountSoldWei": "11000000000000000000",
  "routePath": Array [
    "0xaB1a4d4f1D656d2450692D237fdD6C7f9146e814",
    "0xFa60D973F7642B748046464e165A65B7323b0DEE",
  ],
  "toToken": Object {
    "address": "0xFa60D973F7642B748046464e165A65B7323b0DEE",
    "asset": "https://pancakeswap.finance/images/tokens/0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82.svg",
    "decimals": 18,
    "symbol": "CAKE",
  },
  "toTokenAmountReceivedWei": "10000000000000000000",
}
`;
